UseCase to import KwhDateUsages
