# HouseDB.Core/UseCases/DomoticzKwhDeviceValue/GetDomoticzDevicesForKwhExportRequest.cs
@@ -1,0 +1,9 @@
+﻿using MediatR;
+
+namespace HouseDB.Core.UseCases.DomoticzKwhDeviceValue
+{
+    public class GetDomoticzDevicesForKwhExportRequest : IRequest<GetDomoticzDevicesForKwhExportResponse>
+    {
+
+    }
+}
