# HouseDB.Core/UseCases/DomoticzKwhDeviceValue/GetDomoticzDevicesForKwhExportResponse.cs
@@ -1,0 +1,10 @@
+﻿using HouseDB.Core.Models;
+using System.Collections.Generic;
+
+namespace HouseDB.Core.UseCases.DomoticzKwhDeviceValue
+{
+    public class GetDomoticzDevicesForKwhExportResponse
+    {
+        public List<DeviceDTO> Devices { get; set; }
+    }
+}
