# HouseDB.Core/UseCases/DomoticzKwhDeviceValue/InsertDomoticzDeviceKwhValuesRequestValidator.cs
@@ -1,0 +1,12 @@
+﻿using FluentValidation;
+
+namespace HouseDB.Core.UseCases.DomoticzKwhDeviceValue
+{
+    public class InsertDomoticzDeviceKwhValuesRequestValidator : AbstractValidator<InsertDomoticzDeviceKwhValuesRequest>
+    {
+        public InsertDomoticzDeviceKwhValuesRequestValidator()
+        {
+
+        }
+    }
+}
