# HouseDB.Core/UseCases/DomoticzKwhDeviceValue/InsertDomoticzDeviceKwhValuesResponse.cs
@@ -1,0 +1,6 @@
+﻿namespace HouseDB.Core.UseCases.DomoticzKwhDeviceValue
+{
+    public class InsertDomoticzDeviceKwhValuesResponse
+    {
+    }
+}
